--- a/env/dev/admin-dev.yml
+++ b/env/dev/admin-dev.yml
@@ -1,6 +1,6 @@
 spring:
  datasource:
-  url: jdbc:mysql://proctur-testbed.cfr5g7gon3pi.ap-southeast-1.rds.amazonaws.com:3306/procexamsit?UseUnicode=true&characterEncoding=utf8
+  url: jdbc:mysql://proctur-testbed.cfr5g7gon3pi.ap-southeast-1.rds.amazonaws.com:3306/procsitdb?UseUnicode=true&characterEncoding=utf8
   username: procturtest
   password: procims321
  jpa:
