--- a/env/dev/apigateway-dev.yml
+++ b/env/dev/apigateway-dev.yml
@@ -1,1 +1,11 @@
-
+spring:
+ datasource:
+  url: jdbc:mysql://proctur-testbed.cfr5g7gon3pi.ap-southeast-1.rds.amazonaws.com:3306/procsitdb?UseUnicode=true&characterEncoding=utf8
+  username: procturtest
+  password: procims321
+ jpa:
+  database-platform: org.hibernate.dialect.MySQL8Dialect
+  show-sql: true
+  properties:
+   hibernate:
+    format_sql: true
